tests/compile/derive-u8.stderr
error[E0277]: the trait bound `std::option::Option<u8>: merge::Merge` is not satisfied
 --> $DIR/derive-u8.rs:8:5
  |
8 |     field1: Option<u8>,
  |     ^^^^^^ the trait `merge::Merge` is not implemented for `std::option::Option<u8>`
  |
  = note: required by `merge::Merge::merge`

error[E0277]: the trait bound `u8: merge::Merge` is not satisfied
 --> $DIR/derive-u8.rs:9:5
  |
9 |     field2: u8,
  |     ^^^^^^ the trait `merge::Merge` is not implemented for `u8`
  |
  = note: required by `merge::Merge::merge`
